인기게시물 및 조회수 추가

--- a/checkmate/templates/offcampusCommunity.html
+++ b/checkmate/templates/offcampusCommunity.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="com_container">
     <h3>자취 정보 공유 게시판</h3>
-    <a id="com_t" href="">인기 게시글</a>
+    <a id="com_t" href="{% url 'offcampus_popular' %}">인기 게시글</a>
     <div class="com_sub-content">
             <h5>검색</h5>
             <form action="" method="get">
