--- a/roommate/templates/detail.html
+++ b/roommate/templates/detail.html
@@ -9,6 +9,9 @@
 <div class="view_container">
     <div>
         <h3>{{write_detail.title}}</h3>
+        <form action="" method="GET">
+            <button id="Favorites" type="submit" name="Favorites" value="scrap">스크랩</button>
+        </form>
         <select name="hashtag">
             <option value=1>원룸정보</option>
             <option value=2>기숙사정보</option>
