--- a/checkmate/templates/mypageScrap.html
+++ b/checkmate/templates/mypageScrap.html
@@ -23,12 +23,18 @@
 
 
             <div class="mypage_sub-bar">
-
-                <input type="checkbox" name="written" id="checkbox" class="checkbox_all" value='selectall'
-                    onclick='selectAll(this);'>
-
+                <div>
+                    <input type="checkbox" name="written" id="checkbox" class="checkbox_all" value='selectall'onclick='selectAll(this);'>
+                </div>
                 <p>글쓴이</p>
                 <p>제목</p>
+            </div>
+            <div>
+                {% for scrap in scraps %}
+                    <input type="checkbox" name="written" class="mypage_list-checkbox checkbox_all">
+                    <p>{{ scrap.write.user_id.user_nickname }}</p>
+                    <p><a href="{% url 'detail' scrap.write.id %}">{{ scrap.write.title }}</a></p>
+                {% endfor %}
             </div>
 
             <button class="mypage_delete">삭제하기</button>
@@ -55,6 +61,7 @@
         const mypage_btn = document.querySelector('.mypage_btn');
         const mypage_list_checkbox = document.querySelectorAll('.mypage_list-checkbox');
         const checkbox_all = document.querySelectorAll('.checkbox_all');
+        const delete_btn = document.querySelector('.mypage_delete');
 
         let edit = 0;
         delete_btn.style.visibility = 'hidden';
