--- a/account/templates/mypageProfile.html
+++ b/account/templates/mypageProfile.html
@@ -7,8 +7,8 @@
 
 {% block content %}
 
-<div class="mypage_container bg">
-    <div class="mypage_nav">
+<div class="mypage_container bg row justify-content-center">
+    <div class="mypage_nav col-4 d-none d-md-block">
         <h3 class="mypage_title">마이페이지</h3>
         <!-- border-left 색상 바꾸기 (클릭 모션) -->
         <ul >
@@ -18,7 +18,7 @@
             <li><a href="{% url 'mypageWritten' %}">내가 작성한 글</a></li>
         </ul>
     </div>
-    <div class="mypage_content">
+    <div class="mypage_content col-10 col-md-8">
         <h3 class="mypage_subtitle">회원정보 수정</h3>
 
         <form action="" method="post">
