--- a/checkmate/templates/base.html
+++ b/checkmate/templates/base.html
@@ -45,8 +45,58 @@
         </svg>
         <a class="d-none d-sm-inline" href="{% url 'main' %}">CHECKMATE</a>
     </div>
-    <nav >
-        <div class="right-menu first">
+
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="main-check">
+            <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect x="1" y="1" width="20" height="20" rx="1" stroke="url(#paint0_linear)" stroke-width="2" />
+                <rect x="11" y="11" width="11" height="11" fill="url(#paint1_linear)" />
+                <rect width="11" height="11" fill="url(#paint2_linear)" />
+                <defs>
+                    <linearGradient id="paint0_linear" x1="0" y1="0" x2="22" y2="22" gradientUnits="userSpaceOnUse">
+                        <stop stop-color="#918EFF" />
+                        <stop offset="1" stop-color="#3F97FF" />
+                    </linearGradient>
+                    <linearGradient id="paint1_linear" x1="-6.55651e-07" y1="6.55651e-07" x2="22" y2="22"
+                        gradientUnits="userSpaceOnUse">
+                        <stop stop-color="#918EFF" />
+                        <stop offset="1" stop-color="#3F97FF" />
+                    </linearGradient>
+                    <linearGradient id="paint2_linear" x1="0" y1="0" x2="22" y2="21.45" gradientUnits="userSpaceOnUse">
+                        <stop stop-color="#918EFF" />
+                        <stop offset="1" stop-color="#3F97FF" />
+                    </linearGradient>
+                </defs>
+            </svg>
+            <a class="d-none d-sm-inline" href="{% url 'main' %}">CHECKMATE</a>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#">dropdown</a>
+                <ul class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+
+
+    <nav>
+        <div class="right-menu first ">
             <ul>
                 <li><a href="{% url 'searchRoommate' %}">룸메 찾기</a></li>
                 <li><a href="{% url 'domitoryCommunity' %}">정보 공유</a>
