--- a/checkmate/templates/mypageWritten.html
+++ b/checkmate/templates/mypageWritten.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block content %}
-<div class="mypage_container bg">
-    <div class="mypage_nav  col-lg-5 col-md-6 col-sm-12 ">
+<div class="mypage_container bg row justify-content-center">
+    <div class="mypage_nav col-4 d-none d-sm-block">
         <h3 class="mypage_title">마이페이지</h3>
         <!-- border-left 색상 바꾸기 (클릭 모션) -->
         <ul>
@@ -16,7 +16,7 @@
             <li><a href="{% url 'mypageWritten' %}">내가 작성한 글</a></li>
         </ul>
     </div>
-    <div class="mypage_content col-lg-5 col-md-6 col-sm-12">
+    <div class="mypage_content col-10 col-md-8">
         <div class="mypage_write-content">
             <h3 class="mypage_subtitle">내가 작성한 글</h3>
             <button class="mypage_btn">수정</button>
@@ -37,15 +37,15 @@
 
 
             {% for post in d_posts %}
-            <div class="mypage_list"  >
-                <input class="mypage_list-checkbox checkbox_all" type="checkbox" name="written" id="checkbox">
+            <div class="mypage_list">
+                <input class="mypage_list-checkbox checkbox_all" type="checkbox" name="written">
                 <p class="mypage_content-title" onclick='location.href="{% url 'domitoryView' post.id %}"'>기숙사 정보</p>
                 <p class="mypage_content-body" onclick='location.href="{% url 'domitoryView' post.id %}"'>{{ post.title }}</p>
             </div>
             {% endfor %}
             {% for post in o_posts %}
             <div class="mypage_list" >
-                <input class="mypage_list-checkbox checkbox_all" type="checkbox" name="written" id="checkbox">
+                <input class="mypage_list-checkbox checkbox_all" type="checkbox" name="written">
                 <p class="mypage_content-title" onclick='location.href="{% url 'offcampusView' post.id %}"'>자취 정보</p>
                 <p class="mypage_content-body" onclick='location.href="{% url 'offcampusView' post.id %}"'>{{ post.title }}</p>
             </div>
