--- a/static/css/register.css
+++ b/static/css/register.css
@@ -8,7 +8,7 @@
 
 }
 .signup .title{
-    font-family: Jalnan;
+    font-family: 'yg-jalnan';
     font-size: 40px;
     color: #254074;
     width: 20vw;
