--- a/static/css/login.css
+++ b/static/css/login.css
@@ -35,7 +35,7 @@
  .popup h4{
     text-align: center;
     font-size: 20px;
-    font-family: Jalnan;
+    font-family: 'yg-jalnan';
     line-height: 30px;
     margin-top: 20px;
 
@@ -53,7 +53,7 @@
     width: 310px;
     height: 53px;
     margin-left: 28vw;
-    font-family: Jalnan;
+    font-family: 'yg-jalnan';
     font-size: 50px;
     background: linear-gradient(125deg, rgba(145, 142, 255, 1) 15%, rgba(63, 151, 255, 1) 85%);
     -webkit-text-fill-color: transparent;
