--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -36,6 +36,7 @@
 }
 #modal .title h2 {
     display: inline;
+    font-family: 'yg-jalnan';
 }
 #modal .close-area {
     display: inline;
@@ -51,6 +52,7 @@
     padding: 0px 10px;
     text-shadow: 1px 1px 2px gray;
     color: white;
+    font-family: 'S-CoreDream-3Light';
 }
 .open{
     width: 40px;
