--- a/static/css/view_page.css
+++ b/static/css/view_page.css
@@ -13,7 +13,7 @@
     border-bottom: 1px solid #C9C9C9;
 }
 .view_box1 h3{
-    font-family: Jalnan;
+    font-family: 'yg-jalnan';
     font-size: 30px;
     color: #254074;
     white-space  : nowrap;
@@ -88,7 +88,7 @@
  .popup h4{
     text-align: center;
     font-size: 20px;
-    font-family: Jalnan;
+    font-family: 'yg-jalnan';
     line-height: 30px;
     margin-top: 20px;
 
