--- a/static/css/write.css
+++ b/static/css/write.css
@@ -6,7 +6,7 @@
     margin-top: 60px;
 }
 .info_container h3{
-    font-family: Jalnan;
+    font-family: 'yg-jalnan';
     font-size: 30px;
     line-height: 42px;
     color: #254074;
@@ -15,6 +15,7 @@
 }
 .title{
     width: 80%;
+    font-family: ''
 }
 .hashtag{
     font-family: 'S-CoreDream-7ExtraBold';
@@ -28,7 +29,7 @@
 }
 .info_container-box1 input{
     padding-left: 13px;
-    font-family: Jalnan;
+    font-family: 'yg-jalnan';
     font-size: 17px;
     letter-spacing: 0.1em;
     width: 60%;
@@ -44,7 +45,7 @@
     padding-bottom: 10px;
 }
 .info_container button{
-    font-family: Jalnan;
+    font-family: 'yg-jalnan';
     font-size: 15px;
     color: #5D94FF;
     border: 2px solid #268AFF;
