마이페이지 css 수정

--- a/checkmate/templates/base.html
+++ b/checkmate/templates/base.html
@@ -23,7 +23,7 @@
 <body style="min-width: 300px">
     <!-- 네비바 -->
     <div class="row">
-        <nav class="navbar navbar-expand-lg p-4 p-md-5">
+        <nav class="navbar navbar-expand-md p-4 p-md-5">
             <div class="container-fluid">
                 <div class="main-check">
                     <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
