--- a/checkmate/templates/main.html
+++ b/checkmate/templates/main.html
@@ -8,7 +8,7 @@
 {% endblock %}
 {% block content %}
 <div>
-    <a href="{% url 'survey' %}">내정보 입력-임시</a>
+    <!-- <a href="{% url 'survey' %}">내정보 입력-임시</a> -->
 
 
 <div>
@@ -38,7 +38,7 @@
                 <div class="menu-2 col-lg-5 col-md-6 col-12 p-5">
                     <h1 class="title">정보공유하기</h1>
                     <p class="detail">기숙사, 원룸 정보를 공유 해주세요</p>
-                    <button onclick="location.href='domitoryCommunity'">
+                    <button class="float-end shadow-btn" onclick="location.href='domitoryCommunity'">
                         <p>바로가기 ></p>
                         <img src="" alt=""> <!-- 화살표 이미지 추가 -->
                     </button>
