--- a/roommate/templates/searchRoommate.html
+++ b/roommate/templates/searchRoommate.html
@@ -343,14 +343,14 @@
     <h5> &nbsp; '{{ search_keyword }}' 검색 결과입니다</h5>
     {% endif %}
     <div>
-        <table class="table table-responsive">
+        <table class="table table-responsive table-hover">
             <thead class="thead-light">
                 <tr>
-                    <th scope="col" style="width: 10%">상태</th>
-                    <th scope="col" style="width: 10%">기숙사/자취</th>
-                    <th scope="col" style="width: 10%">성별</th>
-                    <th scope="col" style="width: 10%">나이</th>
-                    <th scope="col" style="width: 55%">제목</th>
+                    <th scope="col">상태</th>
+                    <th scope="col">기숙사/자취</th>
+                    <th scope="col">성별</th>
+                    <th scope="col">나이</th>
+                    <th scope="col">제목</th>
                     <!-- <th>적합도</th> 구현X -->
                 </tr>
             </thead>
