--- a/checkmate/templates/domitoryCommunity.html
+++ b/checkmate/templates/domitoryCommunity.html
@@ -25,33 +25,49 @@
         </div>
     </div>
 
-    {% if search_keyword %}
-    <h5> &nbsp; '{{ search_keyword }}' 검색 결과입니다</h5>
-    {% endif %}
-    <div class="table">
-        {% if posts %}
-        {% for post in posts %}     
-        <div class="com_content" onclick="location.href='{% url 'domitoryView' post.id %}'">
-            {% if post.preface_2 == '정문' or post.preface == '후문' or post.preface == '남문' or post.preface == '호탄' or post.preface == '기타' %}
-            <p class="preface" id="com_content-info">원룸정보</p>
-            <p id="com_content-title">{{ post.preface_2 }}</p>
-            <p id="com_content-body">{{ post.title }}</p>
-            {% else %}
-            <p class="preface" id="com_content-info">{{ post.preface }}</p>
-            <p id="com_content-title">{{ post.preface_2 }}</p>
-            <p id="com_content-body">{{ post.title }}</p>
-            {% endif %}
-        </div>
-    </div>
-    {% endfor %}
-    {% else %}
-        {% if search_keyword %}
-        일치하는 검색 결과가 없습니다
-        {% else %}
-        작성된 게시글이 없습니다
-        {% endif %}
-    {% endif %}
 
+    <div>
+        <table class="table table-responsive table-hover">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">상태</th>
+                    <th scope="col">분류</th>
+                    <th scope="col">제목</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% if search_keyword %}
+                <h5> &nbsp; '{{ search_keyword }}' 검색 결과입니다</h5>
+                {% endif %}
+                {% if posts %}
+                {% for post in posts %}     
+                <tr class="com_content" onclick="location.href='{% url 'domitoryView' post.id %}'">
+                    {% if post.preface_2 == '정문' or post.preface == '후문' or post.preface == '남문' or post.preface == '호탄' or post.preface == '기타' %}
+                    <td  scope="row" class="preface" id="com_content-info">원룸정보</td>
+                    <td id="com_content-title">{{ post.preface_2 }}</td>
+                    <td id="com_content-body">{{ post.title }}</td>
+                    {% else %}
+                    <td class="preface btn mt-1 p-1" id="com_content-info" disabled>{{ post.preface }}</td>
+                    <td id="com_content-title">{{ post.preface_2 }}</td>
+                    <td id="com_content-body">{{ post.title }}</td>
+                    {% endif %}
+                </tr>
+            </div>
+            {% endfor %}
+            {% else %}
+                {% if search_keyword %}
+                <tr>
+                    <td scope="row" colspan="5">일치하는 검색 결과가 없습니다</td>
+                </tr>
+                {% else %}
+                <tr>
+                    <td scope="row" colspan="5">작성된 게시글이 없습니다</td>
+                </tr>
+                {% endif %}
+            {% endif %}
+            </tbody>
+        </table>
+    </div>
     <div>
         <ul class="pagination justify-content-center">
             <li class="page-item"><a class="page-link" href="#" style="color:#254074; border:0;">◀</a></li>
