--- a/checkmate/templates/mypageScrap.html
+++ b/checkmate/templates/mypageScrap.html
@@ -16,6 +16,15 @@
             <li><a href="{% url 'mypageWritten' %}">내가 작성한 글</a></li>
         </ul>
     </div>
+    <!-- 모바일버전 nav -->
+    <div class="mypage_nav_mobile row d-block d-md-none">
+        <ul >
+            <li><a href="{% url 'mypageProfile' %}">회원정보 수정</a></li>
+            <li><a href="{% url 'infoWrite' %}">체크리스트 수정</a></li>
+            <li><a href="{% url 'mypageScrap' %}">스크랩 목록</a></li>
+            <li><a href="{% url 'mypageWritten' %}">내가 작성한 글</a></li>
+        </ul>
+    </div>
     <div class="mypage_content col-10 col-md-8">
         <div class="mypage_scap-content">
             <h3 class="mypage_subtitle row">스크랩</h3>
