--- a/checkmate/templates/mypageWritten.html
+++ b/checkmate/templates/mypageWritten.html
@@ -6,10 +6,19 @@
 
 {% block content %}
 <div class="mypage_container bg row justify-content-center">
-    <div class="mypage_nav col-4 d-none d-sm-block">
+    <div class="mypage_nav col-4 d-none d-md-block">
         <h3 class="mypage_title">마이페이지</h3>
         <!-- border-left 색상 바꾸기 (클릭 모션) -->
         <ul>
+            <li><a href="{% url 'mypageProfile' %}">회원정보 수정</a></li>
+            <li><a href="{% url 'infoWrite' %}">체크리스트 수정</a></li>
+            <li><a href="{% url 'mypageScrap' %}">스크랩 목록</a></li>
+            <li><a href="{% url 'mypageWritten' %}">내가 작성한 글</a></li>
+        </ul>
+    </div>
+    <!-- 모바일버전 nav -->
+    <div class="mypage_nav_mobile row d-block d-md-none">
+        <ul >
             <li><a href="{% url 'mypageProfile' %}">회원정보 수정</a></li>
             <li><a href="{% url 'infoWrite' %}">체크리스트 수정</a></li>
             <li><a href="{% url 'mypageScrap' %}">스크랩 목록</a></li>
