--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -25,6 +25,7 @@ p{
     /* white-space  : nowrap; */
     width: 100%;
 }
+/* 기본네비바 */
 .mypage_nav ul{
     list-style: none;
     font-size: 15px;
@@ -43,7 +44,7 @@ p{
 }
 .mypage_nav li >a:hover{
 
-    color: black;
+    color: #254074;
 }
 
 .mypage_nav li >a:active{
@@ -51,6 +52,7 @@ p{
     border-left:5px solid #3F97FF;
 }
 
+/*  */
 .mypage_content{
     padding: 20px 40px;
 }
@@ -195,3 +197,47 @@ input:-webkit-autofill {
     z-index: 10;
 }
 
+@media screen and (max-width: 768px){
+    /* 모바일 네비바 */
+    .mypage_container{
+        margin-top: 0;
+
+    }
+
+    .mypage_nav_mobile{
+        margin: 20px 0;
+    }
+
+    .mypage_nav_mobile ul{
+        list-style: none;
+        font-size: 15px;
+        line-height: 20px;
+        font-family: 'S-CoreDream-5Medium';
+        padding-left: 0px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .mypage_nav_mobile a{
+        display:inline-block;
+        color: #C6C6C6;
+        text-decoration:none;
+        padding: 5px;
+        font-size: 14px;
+    }
+
+    .mypage_nav_mobile a:hover{
+        color: #254074;
+    }
+
+    .mypage_nav_mobile li >a:active{
+        color: #254074;
+    }
+
+    .mypage_content{
+        padding: 0;
+        margin: 0;
+    }
+
+}
