--- a/checkmate/templates/offcampusView.html
+++ b/checkmate/templates/offcampusView.html
@@ -10,6 +10,9 @@
     <p class="view_info">{{ post.preface }} | {{ post.preface_2 }}</p>
     <div class="view_box1">
         <h3>{{ post.title }}</h3>
+        <form action="" method="GET">
+            <button id="Favorites" type="submit" name="Favorites" value="scrap">스크랩</button>
+        </form>
         <!-- 타이틀 -->
             <small>{{ post.pub_date }}</small>
     </div>
