--- a/static/css/view_page.css
+++ b/static/css/view_page.css
@@ -102,3 +102,84 @@
     font-size: 25px;
     cursor: pointer;
  }
+
+ /* -------------룸메찾기 detail 페이지 --------------- */
+
+ /* 글 제목 */
+ .write-title{
+    font-family: 'yg-jalnan';
+    color: #254074;
+
+ }
+
+ /* 글쓴이 정보 */
+ writer-info{
+
+ }
+
+ .write-class{
+    font-family: 'S-CoreDream-7ExtraBold';
+    font-size: 15px;
+    color: #254074;
+    padding: 0 0 0 15px;
+    border: 1.5px solid #254074;
+    box-sizing: border-box;
+    border-radius: 25px;
+    height: 30px;
+    width: 150px;
+ }
+
+ /* 체크리스트 */
+ .checklist-box{
+    border: 1.5px solid #C9C9C9;
+    border-radius: 10px;
+    font-family: 'S-CoreDream-3Light';
+    font-size: 14px;
+
+ }
+
+ .checklist-box h3{
+    font-size: 18px;
+    font-family: 'S-CoreDream-5Medium';
+    border-bottom: 1px solid #C9C9C9;
+    padding-bottom: 10px;
+ }
+ /* 안되넹.. */
+ .checklist-box h3:nth-child(2){
+    border-top: 1px solid #C9C9C9;
+ }
+
+
+ .checklist-box p{
+    display: inline-block;
+    width: 33%
+ }
+
+ .checklist-box strong{
+    display: inline-block;
+    font-family: 'S-CoreDream-4Regular';
+    width: 15%
+ }
+
+
+ /* 작성글 */
+ .detail-body{
+    padding: 20px;
+ }
+
+ @media screen and (max-width: 768px){
+    .write-title{
+        margin-top: 30px;
+    }
+    .checklist-box p{
+        display: inline-block;
+        width: 65%
+     }
+    
+     .checklist-box strong{
+        display: inline-block;
+        font-family: 'S-CoreDream-4Regular';
+        width: 30%
+     }
+    
+}
